Декомпозиция сервисов спот, фьюч, фандинг